--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^2.4.1"
   },
   "dependencies": {
-    "express": "^4.15.0",
     "angular": "^1.6.3",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "webpack": "^2.4.1"
   }
 }
