--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql": "^2.13.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-radio-buttons": "^1.0.10",
     "webpack": "^2.4.1"
   }
 }
